; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_psb_intel_sdvo.c_psb_intel_sdvo_set_value.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_psb_intel_sdvo.c_psb_intel_sdvo_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.psb_intel_sdvo = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.psb_intel_sdvo*, i32, i8*, i32)* @psb_intel_sdvo_set_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @psb_intel_sdvo_set_value(%struct.psb_intel_sdvo* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.psb_intel_sdvo*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.psb_intel_sdvo* %0, %struct.psb_intel_sdvo** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load %struct.psb_intel_sdvo*, %struct.psb_intel_sdvo** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = load i32, i32* %9, align 4
  %14 = call i32 @psb_intel_sdvo_write_cmd(%struct.psb_intel_sdvo* %10, i32 %11, i8* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %20

17:                                               ; preds = %4
  %18 = load %struct.psb_intel_sdvo*, %struct.psb_intel_sdvo** %6, align 8
  %19 = call i32 @psb_intel_sdvo_read_response(%struct.psb_intel_sdvo* %18, i32* null, i32 0)
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %17, %16
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @psb_intel_sdvo_write_cmd(%struct.psb_intel_sdvo*, i32, i8*, i32) #1

declare dso_local i32 @psb_intel_sdvo_read_response(%struct.psb_intel_sdvo*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
